Bug 429801 - There is only one alternative for Digital Clock widget
Summary: There is only one alternative for Digital Clock widget
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-29 11:04 UTC by Patrick Silva
Modified: 2020-12-02 15:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (58.05 KB, image/png)
2020-11-29 11:04 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-29 11:04:12 UTC
Created attachment 133724 [details]
screenshot

STEPS TO REPRODUCE
1. right-click on Digital Clock widget beside the system tray
and choose "Show alternatives..."
2. 
3. 

OBSERVED RESULT
as we can see in the attached screenshot, "Calendar" is the only available alternative

EXPECTED RESULT
all alternatives should be available

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 1 Nicolas Fella 2020-12-02 13:28:05 UTC
Regression from https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/307
Comment 2 Bug Janitor Service 2020-12-02 14:25:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/496
Comment 3 Nicolas Fella 2020-12-02 15:09:54 UTC
Git commit 1bd40e27b6ef68856fef070ab01eade9de7b1572 by Nicolas Fella.
Committed on 02/12/2020 at 15:09.
Pushed by nicolasfella into branch 'master'.

Fix alternatives for applets

X-Plasma-Provides is a list of strings, not a single string
Related: bug 429800

M  +9    -3    components/shellprivate/widgetexplorer/plasmaappletitemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/1bd40e27b6ef68856fef070ab01eade9de7b1572