Fix alternatives for applets

X-Plasma-Provides is a list of strings, not a single string

BUG: 429801
BUG: 429800